--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">EscapeIr</string>
+    <string name="app_name">EscapeIrAndro</string>
     <string name="action_settings_pause">Pause</string>
     <string name="action_settings_return">Retour menu</string>
     <string name="action_settings_exit">Quitter</string>
