--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="action_settings_pause">Pause</string>
     <string name="action_settings_return">Retour menu</string>
     <string name="action_settings_exit">Quitter</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello world!S</string>
 
 </resources>
